--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "jp.uguisu.aikotoba.mmlt"
         minSdkVersion 4
-        targetSdkVersion 22
+        targetSdkVersion 25
     }
 
     buildTypes {
