--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,12 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt')
+
+            useProguard true
+
+            minifyEnabled true
+            shrinkResources true
         }
     }
 }
