--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,9 @@ android {
         applicationId "jp.uguisu.aikotoba.mmlt"
         minSdkVersion 4
         targetSdkVersion 28
+
+        versionCode 5
+        versionName "1.04"
     }
 
     buildTypes {
