--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.uguisu.aikotoba.mmlt"
-    android:versionCode="4"
-    android:versionName="1.03">
+    package="jp.uguisu.aikotoba.mmlt">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
