--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    namespace 'jp.uguisu.aikotoba.mmlt'
+    compileSdkVersion 33
 
     defaultConfig {
-        applicationId "jp.uguisu.aikotoba.mmlt"
         minSdkVersion 4
         targetSdkVersion 28
 
@@ -15,10 +14,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt')
-
-            useProguard true
 
             minifyEnabled true
             shrinkResources true
