--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
         <service
             android:name=".BackgroundService"
+            android:foregroundServiceType="mediaPlayback"
             android:exported="false" />
     </application>
 
